Transição da página 1

--- a/Site/Quinhentismo/Quinhentismo_principal.html
+++ b/Site/Quinhentismo/Quinhentismo_principal.html
@@ -38,39 +38,39 @@
     </nav>
 
     <container id="pg1">
-        <div id="title">
+        <div class="title">
             <h1>O Quinhentismo</h1>
             <h2>A Primeira Manifestação Literária no Brasil</h2>
         </div>
-        <div id="txt1">
+        <div id="txt1" class="transicao">
             <p>O Quinhentismo marca um período fundamental na literatura brasileira, representando a primeira expressão literária em nosso território. Conhecido como "literatura de informação", esse movimento foi responsável por descrever as novas terras descobertas pelos portugueses no século XVI, revelando a fauna, flora e culturas indígenas. Neste post, exploraremos as características, contexto histórico e os principais autores desse período fascinante.</p>
             <img src="imagens - caracteristicas/chegada.jpeg" alt="">
         </div>   
     </container>
 
-    <h1 id="title">O que é o Quinhentismo?</h1>
+    <h1 class="title">O que é o Quinhentismo?</h1>
     <container id="pg2">
         <div id="oqEh">
-            <div id="txt2">
+            <div id="txt2" class="transicao">
                 <p>O Quinhentismo abrange o período de 1500 a 1601 e é composto pelos primeiros textos produzidos no Brasil ou sobre o Brasil. Durante esse tempo, os escrivães e cronistas relataram suas impressões e experiências, marcando o pontapé inicial da produção literária no país.</p>
             </div>
         </div>
         <h2 id="title2">Características Principais:</h2>
         <div id="caracteristicas">
             <ul>
-                <li>
+                <li class="transicao">
                     Literatura de Informação: Os textos da época priorizavam a descrição das terras brasileiras, da fauna e flora, dos povos indígenas e dos seus costumes.
                 </li>
-                <li>
+                <li class="transicao">
                     Relatos de Viagens: Narrativas que destacam as experiências dos viajantes durante as Grandes Navegações.
                 </li>
-                <li>
+                <li class="transicao">
                     Visão eurocêntrica: A maioria dos autores, portugueses, apresentava uma visão eurocêntrica, valorizando a cultura europeia e subestimando a indígena. 
                 </li>
-                <li>
+                <li class="transicao">
                     Falta de aprofundamento: Geralmente, os textos não apresentavam análises críticas ou reflexões mais profundas sobre a realidade brasileira. 
                 </li>
-                <li>
+                <li class="transicao">
                     Diversidade de gêneros: Apesar da predominância da prosa descritiva, também encontramos crônicas, cartas, relatórios e até mesmo poemas.
                 </li>
             </ul>
