Arruimei todos os links que levam para as referências

--- a/Site/Inicio/Menu_quinhentismo.html
+++ b/Site/Inicio/Menu_quinhentismo.html
@@ -36,7 +36,7 @@
             <li>♦</li>
                 <li id="estamos" >Quinhentismo</li>
             <li>♦</li>
-                <li><a href="/Site/referencias/fontes.html">Referências</a></li>
+                <li><a href="/Site/Referências/fontes.html">Referências</a></li>
         </ul>
     </nav>
 
@@ -86,7 +86,7 @@
                 <a href="../Somos/Somos.html">
                     <p>Sobre nós</p>
                 </a>
-                <a href="../referencias/fontes.html">
+                <a href="/Site/Referências/fontes.html">
                     <p>Referências</p>
                 </a>
                 <a href="Menu_quinhentismo.html">
