--- a/Site/Quinhentismo_videos/videos.html
+++ b/Site/Quinhentismo_videos/videos.html
@@ -98,7 +98,7 @@
                 <a href="../Somos/Somos.html">
                     <p>Sobre nós</p>
                 </a>
-                <a href="../referencias/fontes.html">
+                <a href="/Site/Referências/fontes.html">
                     <p>Referências</p>
                 </a>
                 <a href="videos.html">
