--- a/Site/Quinhentismo/Quinhentismo_principal.html
+++ b/Site/Quinhentismo/Quinhentismo_principal.html
@@ -122,7 +122,7 @@
                 <a href="../Somos/Somos.html">
                     <p>Sobre nós</p>
                 </a>
-                <a href="../referencias/fontes.html">
+                <a href="/Site/Referências/fontes.html">
                     <p>Referências</p>
                 </a>
                 <a href="Quinhentismo_principal.html">
