--- a/Site/Quinhentismo_autores/Autores.html
+++ b/Site/Quinhentismo_autores/Autores.html
@@ -170,7 +170,7 @@
                 <a href="../Somos/Somos.html">
                     <p>Sobre nós</p>
                 </a>
-                <a href="../referencias/fontes.html">
+                <a href="/Site/Referências/fontes.html">
                     <p>Referências</p>
                 </a>
                 <a href="Autores.html">
