mudei os textos dos times na página 'sobre nós', mudei a página de css principal para concertar o z-index das transições, corrigi alguns dos títulos das páginas, e começei a estilização da página das referencias

--- a/Site/Quinhentismo_contexto_histórico/contexto_minha_versao.html
+++ b/Site/Quinhentismo_contexto_histórico/contexto_minha_versao.html
@@ -34,11 +34,11 @@
        <a href="/Site/Inicio/Menu_quinhentismo.html">
            <img src="/Site/Imagens/setinha - icon.png" alt=""> 
        </a>
-       <p>Contexto Histórico</p>
+       <p>Contexto histórico</p>
     </nav>
     
     <conteiner id="pg1">
-        <h1 class="title">Contexto Histórico do Quinhentismo</h1>
+        <h1 class="title">Contexto histórico do Quinhentismo</h1>
         <div id="txt1" class="pgfo">
             <p>Foi no século XVI, entre os anos de 1500 e 1601, que floresceu no Brasil um período literário conhecido como Quinhentismo ou Literatura de Informação. Neste post, exploraremos o contexto histórico deste movimento fascinante.
             </p>
