--- a/Site/Somos/Somos.html
+++ b/Site/Somos/Somos.html
@@ -95,16 +95,16 @@
         <div>
             <h2>Time de desenvolvimento</h2>
             <br>
-            <p>O nosso time de desenvolvimento é composto por - Karina Shimoiizaka Martins, Theo Correia Martins, Matheus Hideki Oshiro Ueno e Gustavo Munhoz Adario Jovelli- que trabalharam no CSS, HTML e JS do projeto, além de elaborarem o design da interfase do usuário. Combinando suas habilidades eles apresentaram o trabalho dos escritores e pesquisadores do nosso grupo
+            <p>O nosso <strong>time de desenvolvimento</strong> é composto por <strong>Karina</strong> Shimoiizaka Martins, <strong>Theo</strong> Correia Martins, <strong>Matheus Hideki</strong> Oshiro Ueno e <strong>Gustavo</strong> Munhoz Adario Jovelli. Eles se dedicaram ao CSS, HTML e JavaScript do projeto, além de elaborar o design da interface do usuário. Combinando suas habilidades, apresentaram o trabalho dos escritores e pesquisadores do nosso grupo de forma coesa e eficiente.
             </p>
         </div>
     </div>
 
     <div class="time" id="pesquisa">
         <div>
-            <h2>Time de pesquisa</h2>
+            <h2>Time de pesquisa e escrita</h2>
             <br>
-            <p>O time de pesquisa e escrita composto por Bianca Dorta Clarindo, Cintya Rios Christovam, Breno Silva de Souza e Manuelli Reis Sá Flaviano foi responsável pela base de dados e a composição do blog. Além disso, eles trabalharam na seleção dos vídeos e das imagens encontradas no decorrer do site. A equipe também desempenhou um papel fundamental na revisão e edição dos textos, garantindo a precisão das informações e a coesão do conteúdo.</p>
+            <p>O <strong>time de pesquisa e escrita</strong>, composto por <strong>Bianca</strong> Dorta Clarindo, <strong>Cintya</strong> Rios Christovam, <strong>Breno</strong> Silva de Souza e <strong>Manuelli</strong> Reis Sá Flaviano, foi responsável pela criação da base de dados e pela elaboração do conteúdo do blog. Além disso, eles selecionaram os vídeos e imagens para o site, desempenhando um papel fundamental na revisão e edição dos textos, garantindo a precisão das informações e a coesão do conteúdo.</p>
         </div>
         <img src="/Site/Imagens/pesquisadores - moldura.png" alt="">
     </div>
