--- a/Site/Quinhentismo/Quinhentismo_principal.html
+++ b/Site/Quinhentismo/Quinhentismo_principal.html
@@ -41,7 +41,7 @@
     <container id="pg1">
         <div class="title">
             <h1>O Quinhentismo</h1>
-            <h2>A Primeira Manifestação Literária no Brasil</h2>
+            <h2>A primeira manifestação literária no Brasil</h2>
         </div>
         <div id="txt1" class="transicao">
             <p>O Quinhentismo marca um período fundamental na literatura brasileira, representando a primeira expressão literária em nosso território. Conhecido como "literatura de informação", esse movimento foi responsável por descrever as novas terras descobertas pelos portugueses no século XVI, revelando a fauna, flora e culturas indígenas. Neste post, exploraremos as características, contexto histórico e os principais autores desse período fascinante.</p>
@@ -56,14 +56,14 @@
                 <p>O Quinhentismo abrange o período de 1500 a 1601 e é composto pelos primeiros textos produzidos no Brasil ou sobre o Brasil. Durante esse tempo, os escrivães e cronistas relataram suas impressões e experiências, marcando o pontapé inicial da produção literária no país.</p>
             </div>
         </div>
-        <h2 id="title2">Características Principais:</h2>
+        <h2 id="title2">Características principais:</h2>
         <div id="caracteristicas">
             <ul>
                 <li class="transicao">
                     Literatura de Informação: Os textos da época priorizavam a descrição das terras brasileiras, da fauna e flora, dos povos indígenas e dos seus costumes.
                 </li>
                 <li class="transicao">
-                    Relatos de Viagens: Narrativas que destacam as experiências dos viajantes durante as Grandes Navegações.
+                    Relatos de viagens: Narrativas que destacam as experiências dos viajantes durante as Grandes Navegações.
                 </li>
                 <li class="transicao">
                     Visão eurocêntrica: A maioria dos autores, portugueses, apresentava uma visão eurocêntrica, valorizando a cultura europeia e subestimando a indígena. 
