ver~sao com o hover no a da página referencias além de ajustes no pading da página, arrumei também o caminho para as outras páginas que ainda estava no antigo

--- a/Site/Inicio/Menu_quinhentismo.html
+++ b/Site/Inicio/Menu_quinhentismo.html
@@ -36,7 +36,7 @@
             <li>♦</li>
                 <li id="estamos" >Quinhentismo</li>
             <li>♦</li>
-                <li><a href="/Site/Referências/fontes.html">Referências</a></li>
+                <li><a href="/Site/referencias/fontes.html">Referências</a></li>
         </ul>
     </nav>
 
