--- a/Site/Somos/Somos.html
+++ b/Site/Somos/Somos.html
@@ -35,7 +35,7 @@
             <li>♦</li>
                 <li><a href="/Site/Inicio/Menu_quinhentismo.html">Quinhentismo</a></li>
             <li>♦</li>
-                <li><a href="/Site/Referências/fontes.html">Referências</a></li>
+                <li><a href="/Site/referencias/fontes.html">Referências</a></li>
         </ul>
     </nav>
 
