Coreção de erros de escrita

--- a/Site/Quinhentismo_autores/Autores.html
+++ b/Site/Quinhentismo_autores/Autores.html
@@ -52,7 +52,7 @@
             <h2>Pero Vaz de Caminha (1450 - 1500)</h2>
             <div class="autor">
                 <img id="retratoPero" src="imagens - autores/pero vaz de caminha.jpg" alt="">
-                <p>Pero Vaz de Caminha nasceu no Porto, Portugal, e foi um dos principais cronistas do período. Ele ocupou cargos importantes, como mestre da balança da Casa da Moeda e vereador da cidade do Porto. Sua obra mais famosa, A Carta de Pero Vaz de Caminha, foi escrita em 1500 e enviada ao Rei Dom Manuel I, relatando suas impressões sobre as terras recém-descobertas no Brasil e os encontros com os indígenas. Caminha é considerado um dos fundadores da literatura brasileira, e sua carta é um documento histórico fundamental</p>
+                <p>Pero Vaz de Caminha nasceu em Porto, Portugal, e foi um dos principais cronistas do período. Ele ocupou cargos importantes, como mestre da balança da Casa da Moeda e vereador da cidade do Porto. Sua obra mais famosa, A Carta de Pero Vaz de Caminha, foi escrita em 1500 e enviada ao Rei Dom Manuel I, relatando suas impressões sobre as terras recém-descobertas no Brasil e os encontros com os indígenas. Caminha é considerado um dos fundadores da literatura brasileira, e sua carta é um documento histórico fundamental.</p>
             </div>
             
             <h3>Principais obras:</h3>
@@ -119,7 +119,7 @@
             <h2>Hans Staden (1525 - 1576)</h2>
             <div class="autor">
                 <img id="retratoHans" src="imagens - autores/Hans Staden.png" alt="">
-                <p>Hans Staden nasceu na Alemanha e é conhecido por suas duas viagens ao Brasil, que resultaram no livro Duas Viagens ao Brasil (1557). Durante sua estadia, foi capturado pelos índios tupinambás e passou nove meses em cativeiro, experiência que relatou com riqueza de detalhes. Sua obra é uma das primeiras a oferecer uma visão externa sobre a vida indígena e as práticas culturais da época, tornando-se um importante testemunho histórico.</p>
+                <p>Hans Staden nasceu na Alemanha e é conhecido por suas duas viagens ao Brasil, que resultaram no livro Duas Viagens ao Brasil (1557). Durante sua estadia, foi capturado pelos indígenas tupinambás e passou nove meses em cativeiro, experiência que relatou com riqueza de detalhes. Sua obra é uma das primeiras a oferecer uma visão externa sobre a vida indígena e as práticas culturais da época, tornando-se um importante testemunho histórico.</p>
             </div>
             
             <h3>Principal obra</h3>
