--- a/Site/Quinhentismo_contexto_histórico/contexto_minha_versao.html
+++ b/Site/Quinhentismo_contexto_histórico/contexto_minha_versao.html
@@ -62,7 +62,7 @@
                     <strong>Idade Média</strong>: A Europa ainda vivia sob a influência medieval, marcada pelo feudalismo, pela Igreja Católica e pela busca por novas rotas comerciais.
                 </li>
                 <li class="pgfo">
-                    <strong>Era das grandes Navegações</strong>: Impulsionada pelo aprimoramento da bússola e da pólvora e pelo desejo de expansão comercial, as Grandes Navegações colocaram a Europa em contato com diferentes culturas e civilizações.
+                    <strong>Era das Grandes Navegações</strong>: Impulsionada pelo aprimoramento da bússola e da pólvora e pelo desejo de expansão comercial, as Grandes Navegações colocaram a Europa em contato com diferentes culturas e civilizações.
                 </li>
                 <li class="pgfo">
                     <strong>Tratado de Tordesilhas (1494)</strong>: Dividiu o Novo Mundo entre Espanha e Portugal, e, em 22 de abril de 1500, os portugueses chegaram ao Brasil, iniciando uma nova era de colonização e exploração.
