adicionando as refs do classicismo

--- a/Site/Referências/fontes.html
+++ b/Site/Referências/fontes.html
@@ -48,6 +48,7 @@
 
     <h1>Referências</h1>
 	<div id="refs">
+		<p class="title-refs">Site Quinhentismo</p>
 		<p class= "referencia">
 			<a href=https://www.portugues.com.br/literatura/quinhentismo.html>https://www.portugues.com.br/literatura/quinhentismo.html</a>
 		</p>
@@ -123,6 +124,106 @@
 		<p class= referencia>
 			<a href=https://brasilescola.uol.com.br/historiag/reforma-protestante.htm>https://brasilescola.uol.com.br/historiag/reforma-protestante.htm</a>
 		</p>
+		
+		<p class="title-refs">Vídeo Classicismo</p>
+
+		<p class= referencia>
+			<a href=https://www.estudopratico.com.br/cultura-romana-religiao-artes-politica/>https://www.estudopratico.com.br/cultura-romana-religiao-artes-politica/</a>
+		</p>
+		<p class= referencia>
+			<a href=https://escolaeducacao.com.br/cultura-grega/>https://escolaeducacao.com.br/cultura-grega/</a>
+		</p>
+		<p class= referencia>
+			<a href=https://artout.com.br/classicismo/>https://artout.com.br/classicismo/</a>
+		</p>
+		<p class= referencia>
+			<a href=https://mundodosfilosofos.com.br/o-pensamento-moderno/>https://mundodosfilosofos.com.br/o-pensamento-moderno/</a>
+		</p>
+		<p class= referencia>
+			<a href=https://guiadoestudante.abril.com.br/curso-enem/literatura-medieval-e-renascentista-classicismo>https://guiadoestudante.abril.com.br/curso-enem/literatura-medieval-e-renascentista-classicismo</a>
+		</p>
+		<p class= referencia>
+			<a href=https://conhecimentocientifico.r7.com/classicismo-literatura/>https://conhecimentocientifico.r7.com/classicismo-literatura/</a>
+		</p>
+		<p class= referencia>
+			<a href=https://institutoling.org.br/explore/um-mergulho-no-renascimento-e-em-seus-conceitos-de-arte-e-artista>https://institutoling.org.br/explore/um-mergulho-no-renascimento-e-em-seus-conceitos-de-arte-e-artista</a>
+		</p>
+		<p class= referencia>
+			<a href=https://blog.stoodi.com.br/blog/historia/renascimento-italiano/>https://blog.stoodi.com.br/blog/historia/renascimento-italiano/</a>
+		</p>
+		<p class= referencia>
+			<a href=https://www.politize.com.br/humanismo/>https://www.politize.com.br/humanismo/</a>
+		</p>
+		<p class= referencia>
+			<a href=https://arterenacentista.es/blog/renacimiento-italia/humanismo-y-literatura-los-escritores-humanistas-del-renacimiento/>https://arterenacentista.es/blog/renacimiento-italia/humanismo-y-literatura-los-escritores-humanistas-del-renacimiento/</a>
+		</p>
+		<p class= referencia>
+			<a href=https://conhecimentocientifico.r7.com/invencao-da-imprensa/>https://conhecimentocientifico.r7.com/invencao-da-imprensa/</a>
+		</p>
+		<p class= referencia>
+			<a href=https://www.biography.com/inventors/a45975535/johannes-gutenberg>https://www.biography.com/inventors/a45975535/johannes-gutenberg</a>
+		</p>
+		<p class= referencia>
+			<a href=https://pt.wikipedia.org/wiki/Johannes_Gutenberg>https://pt.wikipedia.org/wiki/Johannes_Gutenberg</a>
+		</p>
+		<p class= referencia>
+			<a href=https://artout.com.br/classicismo/>https://artout.com.br/classicismo/</a>
+		</p>
+		<p class= referencia>
+			<a href=https://viagemeturismo.abril.com.br/cidades/florenca-firenze>https://viagemeturismo.abril.com.br/cidades/florenca-firenze</a>
+		</p>
+		<p class= referencia>
+			<a href=https://biblioamares.pt/cemirandinos/>https://biblioamares.pt/cemirandinos/</a>
+		</p>
+		<p class= referencia>
+			<a href=https://www.pensador.com/autor/ludovico_ariosto/biografia/>https://www.pensador.com/autor/ludovico_ariosto/biografia/</a>
+		</p>
+		<p class= referencia>
+			<a href=https://www.skoob.com.br/autor/2177-ludovico-ariosto>https://www.skoob.com.br/autor/2177-ludovico-ariosto</a>
+		</p>
+		<p class= referencia>
+			<a href=https://desafiosdaeducacao.com.br/reggio-emilia-educacao-infantil/>https://desafiosdaeducacao.com.br/reggio-emilia-educacao-infantil/</a>
+		</p>
+		<p class= referencia>
+			<a href=https://pt.wikipedia.org/wiki/Hipólito_II_d%27Este_%281509-1572%29>https://pt.wikipedia.org/wiki/Hipólito_II_d%27Este_%281509-1572%29</a>
+		</p>
+		<p class= referencia>
+			<a href=https://www.kobo.com/br/pt/ebook/orlando-furioso-125>https://www.kobo.com/br/pt/ebook/orlando-furioso-125</a>
+		</p>
+		<p class= referencia>
+			<a href=https://cultura.uol.com.br/radio/programas/estacao-cultura/2024/06/26/1490_sir-william-shakespeare-a-ascensao-e-repercussao-de-um-genio.html>https://cultura.uol.com.br/radio/programas/estacao-cultura/2024/06/26/1490_sir-william-shakespeare-a-ascensao-e-repercussao-de-um-genio.html</a>
+		</p>
+		<p class= referencia>
+			<a href=https://www.idealista.pt/news/imobiliario/habitacao/2024/01/30/60960-como-e-viver-em-coimbra-a-cidade-de-encanto-sonho-e-tradicao>https://www.idealista.pt/news/imobiliario/habitacao/2024/01/30/60960-como-e-viver-em-coimbra-a-cidade-de-encanto-sonho-e-tradicao</a>
+		</p>
+		<p class= referencia>
+			<a href=https://www.educamaisbrasil.com.br/enem/artes/renascimento>https://www.educamaisbrasil.com.br/enem/artes/renascimento</a>
+		</p>
+		<p class= referencia>
+			<a href=https://greciantiga.org/arquivo.asp?num=0427>https://greciantiga.org/arquivo.asp?num=0427</a>
+		</p>
+		<p class= referencia>
+			<a href=https://brasilescola.uol.com.br/literatura/luis-camoes.htm>https://brasilescola.uol.com.br/literatura/luis-camoes.htm</a>
+		</p>
+		<p class= referencia>
+			<a href=https://e-cultura.blogs.sapo.pt/luis-de-camoes-a-quem-sempre-nos-656123>https://e-cultura.blogs.sapo.pt/luis-de-camoes-a-quem-sempre-nos-656123</a>
+		</p>
+		<p class= referencia>
+			<a href=https://pt.wikipedia.org/wiki/João_III_de_Portugal>https://pt.wikipedia.org/wiki/João_III_de_Portugal</a>
+		</p>
+		<p class= referencia>
+			<a href=https://www.publico.pt/2013/11/27/culturaipsilon/noticia/a-edicao-texana-de-os-lusiadas--1614026>https://www.publico.pt/2013/11/27/culturaipsilon/noticia/a-edicao-texana-de-os-lusiadas--1614026</a>
+		</p>
+		<p class= referencia>
+			<a href=https://padrepauloricardo.org/aulas/a-expedicao-de-vasco-da-gama>https://padrepauloricardo.org/aulas/a-expedicao-de-vasco-da-gama</a>
+		</p>
+		<p class= referencia>
+			<a href=https://www.amazon.com.br/Eneida-Virgílio/dp/6588732600>https://www.amazon.com.br/Eneida-Virgílio/dp/6588732600</a>
+		</p>
+		<p class= referencia>
+			<a href=https://www.amazon.com.br/Odisseia-Homero-ebook/dp/B08WZZ39DV>https://www.amazon.com.br/Odisseia-Homero-ebook/dp/B08WZZ39DV</a>
+		</p>
+
 	</div>
     <br><br>
     <footer>
