Erros de português

--- a/Site/Quinhentismo/Quinhentismo_principal.html
+++ b/Site/Quinhentismo/Quinhentismo_principal.html
@@ -60,19 +60,19 @@
         <div id="caracteristicas">
             <ul>
                 <li class="transicao">
-                    Literatura de Informação: Os textos da época priorizavam a descrição das terras brasileiras, da fauna e flora, dos povos indígenas e dos seus costumes.
+                    Literatura de Informação: os textos da época priorizavam a descrição das terras brasileiras, da fauna e flora, dos povos indígenas e dos seus costumes;
                 </li>
                 <li class="transicao">
-                    Relatos de viagens: Narrativas que destacam as experiências dos viajantes durante as Grandes Navegações.
+                    Relatos de viagens: narrativas que destacam as experiências dos viajantes durante as Grandes Navegações;
                 </li>
                 <li class="transicao">
-                    Visão eurocêntrica: A maioria dos autores, portugueses, apresentava uma visão eurocêntrica, valorizando a cultura europeia e subestimando a indígena. 
+                    Visão eurocêntrica: a maioria dos autores portugueses apresentava uma visão eurocêntrica, valorizando a cultura europeia e subestimando a indígena; 
                 </li>
                 <li class="transicao">
-                    Falta de aprofundamento: Geralmente, os textos não apresentavam análises críticas ou reflexões mais profundas sobre a realidade brasileira. 
+                    Falta de aprofundamento: geralmente, os textos não apresentavam análises críticas ou reflexões mais profundas sobre a realidade brasileira; 
                 </li>
                 <li class="transicao">
-                    Diversidade de gêneros: Apesar da predominância da prosa descritiva, também encontramos crônicas, cartas, relatórios e até mesmo poemas.
+                    Diversidade de gêneros: apesar da predominância da prosa descritiva, também encontramos crônicas, cartas, relatórios e até mesmo poemas.
                 </li>
             </ul>
             <img src="imagens - caracteristicas/indios .jpeg" alt="">
@@ -117,7 +117,7 @@
             <div>
                 <h3>Explore</h3>
                 <a href="../Inicio/Menu_quinhentismo.html">
-                    <p>Quinhentismo - Inicio</p>
+                    <p>Quinhentismo - início</p>
                 </a>
                 <a href="../Somos/Somos.html">
                     <p>Sobre nós</p>
