--- a/Site/Referências/fontes.html
+++ b/Site/Referências/fontes.html
@@ -134,7 +134,7 @@
             <div>
                 <h3>Explore</h3>
                 <a href="../Inicio/Menu_quinhentismo.html">
-                    <p>Quinhentismo - Inicio</p>
+                    <p>Quinhentismo - início</p>
                 </a>
                 <a href="../Somos/Somos.html">
                     <p>Sobre nós</p>
