--- a/Site/Inicio/Menu_quinhentismo.html
+++ b/Site/Inicio/Menu_quinhentismo.html
@@ -81,7 +81,7 @@
             <div>
                 <h3>Explore</h3>
                 <a href="Menu_quinhentismo.html">
-                    <p>Quinhentismo - Inicio</p>
+                    <p>Quinhentismo - início</p>
                 </a>
                 <a href="../Somos/Somos.html">
                     <p>Sobre nós</p>
