--- a/Site/Quinhentismo_autores/Autores.html
+++ b/Site/Quinhentismo_autores/Autores.html
@@ -43,7 +43,7 @@
     
     <div class="mastertitle">
         <h1>Principais autores</h1>
-        <h4>A seguir alguns autores do quinhentismo</h4>
+        <h4>A seguir alguns autores do Qinhentismo</h4>
     </div>
     
 
@@ -165,7 +165,7 @@
             <div>
                 <h3>Explore</h3>
                 <a href="../Inicio/Menu_quinhentismo.html">
-                    <p>Quinhentismo - Inicio</p>
+                    <p>Quinhentismo - início</p>
                 </a>
                 <a href="../Somos/Somos.html">
                     <p>Sobre nós</p>
