--- a/Site/Quinhentismo_contexto_histórico/contexto_minha_versao.html
+++ b/Site/Quinhentismo_contexto_histórico/contexto_minha_versao.html
@@ -68,7 +68,7 @@
                     <strong>Tratado de Tordesilhas (1494)</strong>: Dividiu o Novo Mundo entre Espanha e Portugal, e, em 22 de abril de 1500, os portugueses chegaram ao Brasil, iniciando uma nova era de colonização e exploração.
                 </li>
                 <li class="pgfo">
-                    <strong>Igreja Católica</strong>: Também teve um papel vital, apoiando a Coroa portuguesa e enviando jesuítas para catequizar os indígenas, um fator que influenciou diretamente a produção literária da época.
+                    <strong>Igreja Católica</strong>: Também teve um papel vital, apoiando a Coroa portuguesa e enviando jesuítas para catequizar os indígenas, um fator que influenciou diretamente a produção literária da época;
                 </li>
                 <li class="pgfo">
                     <strong>Renascimento</strong>: O Renascimento italiano, com a valorização da razão e do humanismo, começava a influenciar o pensamento europeu.
@@ -137,7 +137,7 @@
             <div>
                 <h3>Explore</h3>
                 <a href="../Inicio/Menu_quinhentismo.html">
-                    <p>Quinhentismo - Inicio</p>
+                    <p>Quinhentismo - início</p>
                 </a>
                 <a href="../Somos/Somos.html">
                     <p>Sobre nós</p>
