versão corrigida do contexto histórico

--- a/Site/Quinhentismo_contexto_histórico/contexto_minha_versao.html
+++ b/Site/Quinhentismo_contexto_histórico/contexto_minha_versao.html
@@ -59,16 +59,16 @@
             <div id="text3">
                 <ul>
                 <li class="pgfo">
-                    <strong>Idade Média</strong>: A Europa ainda vivia sob a influência medieval, marcada pelo feudalismo, pela Igreja Católica e pela busca por novas rotas comerciais.
+                    <strong>Idade Média</strong>: a Europa ainda vivia sob a influência medieval, marcada pelo Feudalismo, pela igreja católica e pela busca por novas rotas comerciais;
                 </li>
                 <li class="pgfo">
-                    <strong>Era das Grandes Navegações</strong>: Impulsionada pelo aprimoramento da bússola e da pólvora e pelo desejo de expansão comercial, as Grandes Navegações colocaram a Europa em contato com diferentes culturas e civilizações.
+                    <strong>Era das Grandes Navegações</strong>: impulsionada pelo aprimoramento da bússola e da pólvora e pelo desejo de expansão comercial, as grandes navegações colocaram a Europa em contato com diferentes culturas e civilizações;
                 </li>
                 <li class="pgfo">
-                    <strong>Tratado de Tordesilhas (1494)</strong>: Dividiu o Novo Mundo entre Espanha e Portugal, e, em 22 de abril de 1500, os portugueses chegaram ao Brasil, iniciando uma nova era de colonização e exploração.
+                    <strong>Tratado de Tordesilhas (1494)</strong>: dividiu o Novo Mundo entre Espanha e Portugal, e, em 22 de abril de 1500, os portugueses chegaram ao Brasil, iniciando uma nova era de colonização e exploração;
                 </li>
                 <li class="pgfo">
-                    <strong>Igreja Católica</strong>: Também teve um papel vital, apoiando a Coroa portuguesa e enviando jesuítas para catequizar os indígenas, um fator que influenciou diretamente a produção literária da época.
+                    <strong>Igreja católica</strong>: Também teve um papel vital, apoiando a Coroa de Portugal e enviando jesuítas para catequizar os indígenas, um fator que influenciou diretamente a produção literária da época.
                 </li>
                 <li class="pgfo">
                     <strong>Renascimento</strong>: O Renascimento italiano, com a valorização da razão e do humanismo, começava a influenciar o pensamento europeu.
