Link para o vídeo do classicismo

--- a/Site/Quinhentismo_contexto_histórico/contexto_minha_versao.html
+++ b/Site/Quinhentismo_contexto_histórico/contexto_minha_versao.html
@@ -152,7 +152,7 @@
             </div>
             <div>
                 <h3>Descubra</h3>
-                <a href="">
+                <a href="https://youtu.be/HGMXR4KGLVE">
                     <p>Classicismo: vídeo</p>
                 </a>
             </div>
