--- a/Site/Somos/Somos.html
+++ b/Site/Somos/Somos.html
@@ -149,7 +149,7 @@
             </div>
             <div>
                 <h3>Descubra</h3>
-                <a href="">
+                <a href="https://youtu.be/HGMXR4KGLVE">
                     <p>Classicismo: vídeo</p>
                 </a>
             </div>
