Adicionei a tag target = _blank

--- a/Site/Somos/Somos.html
+++ b/Site/Somos/Somos.html
@@ -120,7 +120,7 @@
         <div>
             <a href=""><img src="/Site/Imagens/email icon.png" alt="" id="email"></a>
 
-            <a href=""><img id="youtube" src="/Site/Imagens/youtbe - imagem.png" alt=""></a>
+            <a href="https://youtu.be/HGMXR4KGLVE" target="_blank"><img id="youtube" src="/Site/Imagens/youtbe - imagem.png" alt=""></a>
         </div>
     </div>
 
