--- a/Site/Quinhentismo_autores/Autores.html
+++ b/Site/Quinhentismo_autores/Autores.html
@@ -179,7 +179,7 @@
             </div>
             <div>
                 <h3>Descubra</h3>
-                <a href="https://youtu.be/HGMXR4KGLVE">
+                <a href="https://youtu.be/HGMXR4KGLVE" target="_blank">
                     <p>Classicismo: vídeo</p>
                 </a>
             </div>
