--- a/Site/Somos/Somos.html
+++ b/Site/Somos/Somos.html
@@ -91,7 +91,7 @@
     <div id="galeira"><img src="/Site/Imagens/galeria dos colaboradores.png" alt=""></div>
 
     <div class="time">
-        <img src="/Site/Imagens/desenvolvedores - moldura.png" alt="">
+        <img src="/Site/Imagens/desenvolvedores - moldura.jpeg" alt="">
         <div>
             <h2>Time de desenvolvimento</h2>
             <br>
